fix nav z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,7 @@ nav {
 	position: fixed;
 	top: 0;
 	left: 0;
+	z-index: 1;
 	width: 100%;
 }
 
